--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.4.0",
+    "@neondatabase/serverless": "^0.10.3",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.10.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.3",
-
-    "@neondatabase/serverless": "^0.10.3",
-		"dotenv": "^16.4.5"
+    "zod": "^3.23.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
@@ -40,6 +40,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "drizzle-kit": "^0.28.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
@@ -47,10 +48,8 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3",
-
-    "drizzle-kit": "^0.28.1", 
-		"tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
