--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "@clerk/nextjs": "^6.4.0",
     "@neondatabase/serverless": "^0.10.3",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.1.1",
+    "@vercel/blob": "^0.26.0",
     "@vercel/postgres": "^0.10.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "geist": "^1.3.0",
+    "lucide-react": "^0.460.0",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "uploadthing": "^7.3.0",
+    "vercel": "^39.1.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
