--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,6 @@
     "**/*.cjs",
     "**/*.js",
     ".next/types/**/*.ts"
-  ],
+, "src/app/_components/images.tsx"  ],
   "exclude": ["node_modules"]
 }
